Update pages, fix media paths, add Austria/Cologne photos, refresh CSS

--- a/html/avusturya.html
+++ b/html/avusturya.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Zeynep Azra - Avusturya Günlükleri</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
@@ -36,32 +36,37 @@
             <tbody>
                 <tr>
                     <td>Viyana</td>
-                    <td>3</td> <td>8</td>
+                    <td>3</td>
+                    <td>8</td>
                 </tr>
             </tbody>
         </table>
 
         <div class="sehir-rehberi">
 
-<details>
-    <summary class="accordion">Viyana - Detayları Gör</summary>
-    <div class="panel">
-        <p>Aşık olduğum Viyana'nın her köşesi ayrı bir sanat eseri gibiydi.</p>
-        
-        <h3>Gezdiğim Yerler</h3>
-        <ul>
-            <li>Stephansdom (Aziz Stefan Katedrali)</li>
-            <img src="stephansdom" width="500" height="400" alt="Aziz Stefan Katedrali">
+            <details>
+                <summary class="accordion">Viyana - Detayları Gör</summary>
+                <div class="panel">
+                    <p>Aşık olduğum Viyana'nın her köşesi ayrı bir sanat eseri gibiydi.</p>
 
-            <li>Michaelerplatz</li>
-            <img src="fotograf/michaelerplatz.jpeg" width="500" height="400" alt="Hofburg Sarayı">
+                    <h3>Gezdiğim Yerler</h3>
+                    <ul>
+                        <li>Stephansdom (Aziz Stefan Katedrali)</li>
+                        <img src="../fotograf/viyana-stephansdom.png" width="500" height="400" alt="Aziz Stefan Katedrali">
+                        <img src="../fotograf/viyana-stephansdomm.png" width="500" height="400" alt="Aziz Stefan Katedrali 2">
 
-            <li>Schönbrunn Sarayı</li>
-            <img src="fotograf/schonbrunn.jpeg" width="500" height="400" alt="Schönbrunn Sarayı">
+                        <li>Michaelerplatz</li>
+                        <img src="../fotograf/viyana-michaelerplatz.png" width="500" height="400" alt="Hofburg Sarayı">
 
-            <li>Belvedere Sarayı</li>
-            <img src="fotograf/belvedere.jpeg" width="500" height="400" alt="Belvedere Sarayı">
-        </ul>
-        
+                        <li>Schönbrunn Sarayı</li>
+                        <img src="../fotograf/viyana-schonbrunnpalace.png" width="500" height="400" alt="Schönbrunn Sarayı">
+
+                        <li>Belvedere Sarayı</li>
+                        <p>Belvedere fotoğrafı henüz eklenmedi.</p>
+                    </ul>
+                </div>
+            </details>
+        </div>
     </div>
-</details>
+</body>
+</html>
