--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
      <title>
         Zeynep Azra - Dünya Günlükleri
      </title>
-     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
@@ -26,7 +26,7 @@
     <section class="hakkimda">
         <h1>Dünya Günlüğüm</h1>
         <div class="profil-alani">
-            <img src="fotograf/zag.jpeg" class="profil-foto" alt="Zeynep Azra">
+            <img src="../fotograf/zag.jpeg" class="profil-foto" alt="Zeynep Azra">
             <div class="tanitim-metni">
                 <p>Merhaba, ben <strong>Zeynep Azra</strong>. Yazılım Mühendisliği 3. sınıf öğrencisiyim.</p>
                 <p>9 Ülke, onlarca şehir ve biriktirdiğim anılarımı bu web sitesinde topladım.</p>
